Fix selector for explicit badge visibility
Only for "grid" layout variations.

--- a/src/client/css/base.css
+++ b/src/client/css/base.css
@@ -110,10 +110,6 @@ h1.media-album {
   z-index: 1;
 }
 
-.tidal-hide .floating-explicit-badge {
-  display: block;
-}
-
 .media-information > header {
   display: flex;
   align-items: center;
